--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,13 @@
-# Travis-CI configuration file for VGMTrans
-sudo: required
-dist: trusty
 language: cpp
 
-matrix:
-  include:
-    # GCC7
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-      before_install:
-        - sudo add-apt-repository --yes ppa:hedges/qt5.5
-        - sudo apt-get update -qq
-        - sudo apt-get install qt55base libfluidsynth-dev
-        # minizip unavailable on trusty
-        - sudo bash -c "echo -e '\n deb http://archive.ubuntu.com/ubuntu xenial main universe' >> '/etc/apt/sources.list.d/ubuntu-xenial-main.list'"
-        - sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 3B4FE6ACC0B21F32
-        - sudo apt-get update -qq
-        - sudo apt-get install -y -q -t xenial libminizip-dev
-        - eval "${MATRIX_EVAL}"
-    # LLVM5
-    - os: linux
-      compiler: clang
-      before_install:
-        - sudo add-apt-repository --yes ppa:hedges/qt5.5
-        - sudo apt-get update -qq
-        - sudo apt-get install qt55base libfluidsynth-dev
-        - sudo bash -c "echo -e '\n deb http://archive.ubuntu.com/ubuntu xenial main universe' >> '/etc/apt/sources.list.d/ubuntu-xenial-main.list'"
-        - sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 3B4FE6ACC0B21F32
-        - sudo apt-get update -qq
-        - sudo apt-get install -y -q -t xenial libminizip-dev
-# VGMTrans officially supports OS X, but Travis runners
-# take too long to start and/or seem to timeout,
-# so this will be disabled until the situation gets better
-#    # xcode7.3
-#    - os: osx
-#      before_install:
-#        - brew upgrade qt || brew install qt
-#        - brew upgrade fluid-synth || brew install fluid-synth
+services:
+  - docker
+
+before_install:
+  - docker pull vgmtrans/vgmtrans-deps:tests_env
+  - docker run -itd --name build vgmtrans/vgmtrans-deps:tests_env
+  - docker exec build git clone --single-branch --branch refactor https://github.com/vgmtrans/vgmtrans /repo
 
 script:
-  - mkdir build
-  - cd build
-  - cmake ..
-  - make
+  - docker exec build cmake -DENABLE_UI_QT=OFF -H/repo -B/build
+  - docker exec build cmake --build /build --target tests
