[externals] make sure minizip uses the right zlib

--- a/externals/minizip/CMakeLists.txt
+++ b/externals/minizip/CMakeLists.txt
@@ -18,5 +18,6 @@ endif()
 
 add_library(minizip STATIC ${SOURCES})
 target_include_directories(minizip PUBLIC .)
+target_link_libraries(minizip PRIVATE ZLIB::ZLIB)
 
 add_library(MiniZip::minizip ALIAS minizip)
