--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ endif()
 target_compile_features(g_options INTERFACE cxx_std_17)
 
 if(MSVC)
-  target_compile_options(g_warnings INTERFACE /W4 /WX "/permissive-")
+  target_compile_options(g_warnings INTERFACE /W4 /WX "/permissive- -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE /Zc:strictStrings-")
 else()
   if(ENABLE_ASAN)
     target_compile_options(g_options INTERFACE -fsanitize=address)
