--- a/src/vgmtrans-qt/CMakeLists.txt
+++ b/src/vgmtrans-qt/CMakeLists.txt
@@ -1,12 +1,25 @@
 #TODO: Make optional: no fluidsynth, no playback support.
 find_package(FLUIDSYNTH)
 if(FLUIDSYNTH_FOUND)
-    message(STATUS "Using system FluidSynth ${FLUIDSYNTH_VERSION_STRING}")
+    message(STATUS "Using FluidSynth ${FLUIDSYNTH_VERSION_STRING}")
 else()
-    message(FATAL_ERROR "Please install FluidSynth! Bundled version not available")
+	if(MSVC)
+		add_library(fluidsynth STATIC IMPORTED)
+		set_target_properties(fluidsynth PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/externals/win-deps/fluidsynth2-msvc2017-x64/fluidsynth.lib")
+		target_include_directories(fluidsynth INTERFACE ${CMAKE_SOURCE_DIR}/externals/win-deps/fluidsynth2-msvc2017-x64/include)
+		message(STATUS "Using FluidSynth fallback")
+	else()
+		message(FATAL_ERROR "Please install FluidSynth! Bundled version not available")
+	endif()
 endif()
 
-find_package(Qt5 5.9 REQUIRED COMPONENTS Gui Widgets)
+
+if (NOT Qt5_DIR AND MSVC)
+	set(Qt5_DIR "${CMAKE_SOURCE_DIR}/externals/win-deps/qt5-msvc2017-x64/lib/cmake/Qt5")
+	message(STATUS "Using Qt5 fallback")
+endif()
+
+find_package(Qt5 REQUIRED COMPONENTS Gui Widgets)
 message(STATUS "Using Qt version ${Qt5Core_VERSION}")
 
 set_property(TARGET Qt5::Core PROPERTY INTERFACE_COMPILE_FEATURES "")
@@ -14,7 +27,11 @@ set(CMAKE_AUTOMOC ON)
 qt5_add_resources(UI_RESOURCES
                   "${CMAKE_CURRENT_LIST_DIR}/resources/resources.qrc")
 
-add_executable(vgmtrans
+if(WIN32)
+	set(GUI_TYPE WIN32)
+endif()
+
+add_executable(vgmtrans ${GUI_TYPE}
                util/HeaderContainer.cpp
                util/HeaderContainer.h
                util/Helpers.cpp
