--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -8,9 +8,9 @@ add_library(vgmcore OBJECT ${MAIN_FILES})
 target_include_directories(vgmcore PUBLIC . ./formats ./loaders)
 #fixme: this stuff shouldn't be public
 target_link_libraries(vgmcore
-                      PUBLIC g_options
-                             g_warnings
-                             fmt::fmt
-                             ZLIB::ZLIB
-                             minizip
-                             tinyxml)
+                      PUBLIC fmt::fmt
+                      PRIVATE g_options
+                              g_warnings
+                              ZLIB::ZLIB
+                              minizip
+                              tinyxml)
