[build] revert libs to public

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -9,8 +9,8 @@ target_include_directories(vgmcore PUBLIC . ./formats ./loaders)
 #fixme: this stuff shouldn't be public
 target_link_libraries(vgmcore
                       PUBLIC fmt::fmt
+                             ZLIB::ZLIB
+                             minizip
+                             tinyxml
                       PRIVATE g_options
-                              g_warnings
-                              ZLIB::ZLIB
-                              minizip
-                              tinyxml)
+                              g_warnings)
